# TFG_Leyre

./: .gitignore  README.md  pyproject.toml
backend/: datos.txt  main.py
backend/app/agents/: ejemplo_rag.py  rag.py
backend/app/clients/: __init__.py  bbdd_client.py  llm_client.py
backend/app/etl/: __init__.py  datos.txt  embeddings.py  ingesta.py
